--- a/src/view/index.ejs
+++ b/src/view/index.ejs
@@ -17,7 +17,7 @@
     <!-- Aquí va tu código -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/src/view/index.ejs">Mi Tienda Online</a>
+        <a class="navbar-brand" href="/">Mi Tienda Online</a>
         <button
           class="navbar-toggler"
           type="button"
